Added functionality to routine activities, update and delete

--- a/public/style.css
+++ b/public/style.css
@@ -58,7 +58,8 @@
 
 #edit-button,
 #delete-button,
-#add-activity-button {
+#add-activity-button,
+#edit-activity-button {
     display: flex;
     flex-direction: row-reverse;
 }
