--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,10 @@ body {
     background-color: #CFE8F4;
 }
 
+footer {
+    background-color: #023047;
+}
+
 /* NAVBAR */
 nav {
     padding-top: 5px;
@@ -47,23 +51,34 @@ nav {
 }
 
 #logout-button:hover{
-    background-color: #219EBC;
+    background-color: #FDB94B;
 }
 
 .active{
     /* background-color: #219EBC; */
-    color: #219EBC;
+    /* color: #219EBC; */
+    color: #FB8500;
 }
 
 /* LOGIN/REGISTER */
+.loginin-register {
+    display: flex;
+    justify-content: center;
+}
+
 .login-form,
 .register-form{
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     text-align: center;
-    border: 2px solid black;
+    border-radius: 10px;
+    /* border: 2px solid black; */
     padding: 10px;
     margin: 30px;
+    max-width: 40vw;
+    min-width: 40vw;
+    background-color: #78BDD9;
+    font-family: 'Zen Maru Gothic', sans-serif;
 }
 
 .register-box,
@@ -72,12 +87,56 @@ nav {
     flex-direction: column;
     padding: 20px;
     margin: 20px;
+    width: 60%;
+    font-weight: bold;
 }
 
+.login-box > input,
+.register-box > input  {
+    border: none;
+    border-radius: 5px;
+    padding: 2px;
+    margin: 3px;
+}
+
+#login-button,
+#register-button {
+    border: none;
+    border-radius: 5px;
+    padding: 2px;
+    width: 8vw;
+    align-items: center;
+    font-family: 'Zen Maru Gothic', sans-serif;
+}
+
+#login-button:hover,
+#register-button:hover {
+    background-color: #FDB94B;
+}
+
+
 /* HOME PAGE */
+.home-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #home-title {
     text-align: center;
-    padding-top: 20px;
+    margin-top: 20vh;
+    font-family: 'Zen Maru Gothic', sans-serif;
+}
+
+.home-quote {
+    display: flex;
+    margin-top: 30vh;
+}
+
+#home-quote{
+    display: flex;
+    align-items: flex-end;
+    font-family: 'Zen Maru Gothic', sans-serif;
 }
 
 /* ROUTINES AND ACTIVITIES */
@@ -88,7 +147,7 @@ nav {
     padding: 10px;
     margin-left: 10px;
     margin-right: 10px;
-}
+    font-family: 'Mandali', sans-serif;}
 
 .all-activities {
     display: flex;
@@ -99,13 +158,27 @@ nav {
     margin-right: 10px;
     align-items: stretch;
     justify-content: center;
+    font-family: 'Zen Maru Gothic', sans-serif;
+}
+
+.routines-all{
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    max-width: 85vw;
+    min-width: 85vw;
+    align-self: center;
+    padding: 5px;
+    margin: 10px;
+    background-color: #78BDD9;
+    box-shadow: 5px 5px 5px #023047;
 }
 
 .routines{
     display: flex;
     flex-direction: column;
     border-radius: 10px;
-    /* border: 2px solid black; */
+    max-width: 85vw;
     padding: 5px;
     margin: 10px;
     background-color: #78BDD9;
@@ -127,6 +200,18 @@ nav {
     flex-direction: column;
 }
 
+.activity-name,
+.activity-description {
+    text-align: center;
+}
+
+.activity-count,
+.activity-duration{
+    font-family: 'Zen Maru Gothic', sans-serif;
+    font-weight: bold;
+    margin-left: 10px;
+}
+
 .activities {
     display: flex;
     flex-direction: column;
@@ -137,7 +222,7 @@ nav {
     border-radius: 10px;
     background-color: #9ED2EA;
     width: 20vw;
-    height: 18vh;
+    height: 20vh;
     box-shadow: 5px 5px 5px #023047
 }
 
@@ -196,6 +281,8 @@ nav {
 .editRoutineForm > input,
 #add-rouitneactivity-form > input,
 .editRoutineActivityForm > input,
+.create-name,
+.create-goal,
 #count,
 #duration {
     border: none;
@@ -270,7 +357,7 @@ nav {
     padding: 20px;
     margin-left: 10px;
     /* border: 2px solid black; */
-    background-color: #023047;
+    background-color: #126782;
 }
 
 .create-new-activity{
@@ -294,12 +381,11 @@ nav {
 #create-name,
 #create-description {
     width: 90%;
+    border: none;
+    border-radius: 5px;
+    padding: 2px;
     margin: 5px;
-}
-
-.create-name,
-.create-goal {
-    margin: 2px;
+    
 }
 
 #add-activity-form {
@@ -314,14 +400,28 @@ nav {
 #add-button,
 #edit-routine_activities-submit {
     border: none;
-    border-radius:5px;
+    border-radius: 5px;
     padding: 5px;
+}
+
+#new-routine-submit:hover,
+#edit-routine-submit:hover,
+#add-button:hover,
+#edit-routine_activities-submit:hover {
+    background-color: #FDB94B;
 }
 
 .routine-name {
     text-align: center;
     font-size: 20px;
     padding: 5px;
+    font-weight: bold;
+    font-family: 'Zen Maru Gothic', sans-serif;
+}
+
+.routine-creator {
+    text-align: center;
+    font-style: italic;
 }
 
 .routine-goal {
